--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.3.0",
     "axios": "^0.21.1",
+    "body-parser": "^1.19.1",
     "express": "^4.17.1",
     "material": "^0.4.3",
     "pg": "^8.2.1",
